--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,11 +1,12 @@
 [flake8]
-ignore =
-    W503
+ignore = E501
+    W503,
+    E501
 exclude =
     tests/,
     */migrations/,
     venv/,
     env/
 per-file-ignores =
-    */settings.py:E501
+    settings.py:E501
 max-complexity = 10
