--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,11 @@
 django==3.2.5
+djangorestframework==3.12.4
 pytest-django==4.4.0
-sqlparse==0.4.1
-asgiref==3.4.1
-pytz==2021.1
-toml==0.10.2
-pluggy==0.13.1
-pyparsing==2.4.7
-packaging==21.0
-attrs==21.2.0
-py==1.10.0
-iniconfig==1.1.1
 pytest==6.2.4
+djoser==2.1.0
+Pillow==8.3.1
+django-filter==2.4.0
+
+gunicorn==20.1.0
+python-dotenv==0.18.0
+psycopg2==2.9.1
