--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           push: true
           context: ./backend/
-          tags: ${{ secrets.DOCKER_USERNAME }}/warmspace-foodgram
+          tags: ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -57,10 +57,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           stack_file_name: docker-compose.yaml
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace-foodgram
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace-foodgram-frontend
-            sudo docker-compose stop
-            sudo docker-compose rm web
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram_frontend:latest
             touch .env 
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -68,7 +66,13 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose down -v
+            sudo docker image prune -af
             sudo docker-compose up -d
+            sudo docker-compose exec -T web python manage.py makemigrations api
+            sudo docker-compose exec -T web python manage.py migrate
+            sudo docker-compose exec -T web python manage.py loaddata --exclude=auth --exclude=contenttypes fixtures.json
+            sudo docker-compose exec -T web python manage.py collectstatic --no-input
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
