work in infra dir_4

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,6 @@ jobs:
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram_frontend:latest
-            sudo docker-compose stop
-            sudo docker-compose rm web
             touch .env 
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -70,10 +68,9 @@ jobs:
             sudo docker-compose down -v
             sudo docker image prune -af
             sudo docker-compose up -d
-            sudo docker-compose exec -T web python manage.py makemigrations api
-            sudo docker-compose exec -T web python manage.py migrate
-            sudo docker-compose exec -T web python manage.py loaddata --exclude=auth --exclude=contenttypes fixtures.json
-            sudo docker-compose exec -T web python manage.py collectstatic --no-input
+            sudo docker-compose exec -T backend python manage.py makemigrations api
+            sudo docker-compose exec -T backend python manage.py migrate
+            sudo docker-compose exec -T backend python manage.py collectstatic --no-input
 
   send_message:
     runs-on: ubuntu-latest
