--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-      - ../frontend/:/app/result_build/
+      - ./frontend/:/app/result_build/
     depends_on:
       - db
 
