--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,9 +10,7 @@ services:
     restart: always
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: uforick/warmspace_foodgram:latest
     restart: always
     volumes:
       - static_value:/code/static/
@@ -23,9 +21,7 @@ services:
       - ./.env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: uforick/warmspace_foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
