--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,11 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return
-        pip install -r requirements.txt 
-    - name: Test with flake8 and django tests
+        pip install -r backend/requirements.txt 
+    - name: Test with flake8
       run: |
             python -m flake8 --ignore=E501
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
@@ -36,12 +37,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_LOGIN }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Push to Docker Hub
+      - name: Push to Docker Hub(backend)
         uses: docker/build-push-action@v2
         with:
           push: true
           context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
+      - name: Push to Docker Hub(frontend)
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: ./frontend/ && ./infra/
+          tags: ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram_frontend:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -58,6 +65,8 @@ jobs:
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram_frontend:latest
+            sudo docker-compose stop
+            sudo docker-compose rm web
             touch .env 
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
@@ -65,6 +74,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            cd ./infra
             sudo docker-compose up -d
             sudo docker-compose exec -T backend python manage.py makemigrations api
             sudo docker-compose exec -T backend python manage.py migrate
