--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,31 +1,38 @@
-version: '3.8'
+version: '3.3'
 
 services:
   db:
-    env_file: 
-      - .env
     image: postgres:12.4
+    container_name: postgresql
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     restart: always
-
-  backend:
-    image: uforick/warmspace_foodgram:latest
-    restart: always
-    volumes:
-      - static_value:/code/static/
-      - media_value:/code/media/
-    depends_on:
-      - db
     env_file:
-      - ./.env
+      - ../.env
 
   frontend:
-    image: uforick/warmspace_foodgram_frontend:latest
+    container_name: frontend
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
       - db
+
+  backend:
+    container_name: backend
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
+    depends_on:
+      - db
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
+    env_file:
+      - ../.env
 
   nginx:
     image: nginx:1.19.3
@@ -36,6 +43,7 @@ services:
       - media_value:/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
+      - ../docs:/usr/share/nginx/html/api/docs
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
     restart: always
