work in infra dir_12

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 178.154.222.48;
+    # server_name 178.154.222.48;
 
     location /media/ {
         autoindex on;
@@ -8,8 +8,8 @@ server {
     }
 
     location /static/admin/ {
-	autoindex on;
-	alias /static/admin/;
+	    autoindex on;
+	    alias /static/admin/;
     }
 
     location /api/docs/ {
