--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,45 @@
 name: Django-app workflow
 
-on: [push, pull_request]
+on: push
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
-
+      with:
+        python-version: 3.8 
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return
-        pip install -r backend/requirements.txt 
+        pip install -r requirements.txt 
     - name: Test with flake8
       run: |
-            python -m flake8 --ignore=E501
-
+        python -m flake8 --ignore=E501 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: tests
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to Docker 
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_LOGIN }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Push to Docker Hub(backend)
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
           context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
-
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,13 +52,14 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
           stack_file_name: docker-compose.yml
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram_frontend:1
             sudo docker-compose stop
-            sudo docker-compose rm web
-            touch .env 
+            touch .env
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
@@ -70,14 +67,10 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec -T backend python manage.py makemigrations api
-            sudo docker-compose exec -T backend python manage.py migrate
-            sudo docker-compose exec -T backend python manage.py collectstatic --no-input
-
+            
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
-    if: github.ref == 'refs/heads/master'
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
