--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '3.3'
-
 services:
+
   db:
+    env_file:
+      - .env
     image: postgres:12.4
-    container_name: postgresql
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     restart: always
-    env_file:
-      - ../.env
 
   frontend:
     build:
@@ -24,13 +23,13 @@ services:
       context: ../backend
       dockerfile: Dockerfile
     restart: always
-    depends_on:
-      - db
     volumes:
       - static_value:/code/static/
       - media_value:/code/media/
+    depends_on:
+      - db
     env_file:
-      - ../.env
+      - ./.env
 
   nginx:
     image: nginx:1.19.3
@@ -41,11 +40,10 @@ services:
       - media_value:/media/
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
-      - ../docs:/usr/share/nginx/html/api/docs
       - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
     restart: always
-    
+
     depends_on:
       - backend
       - frontend
