--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /code
 COPY requirements.txt /code
 RUN pip install -r /code/requirements.txt
 COPY . /code
-CMD gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
+CMD gunicorn foodgram_backend.wsgi:application --bind 0.0.0.0:8000
