--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         pip install -r requirements.txt 
     - name: Test with flake8
       run: |
-        python -m flake8 --ignore=E501 
+        python -m flake8 --ignore=E501,R504
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     if: github.ref == 'refs/heads/master'
