--- a/.github/workflows/Foodgram_workflow.yml
+++ b/.github/workflows/Foodgram_workflow.yml
@@ -1,35 +1,35 @@
-name: Django-app workflow
+name: Foodgram_workflow
 
-on: [push, pull_request]
+on: push
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 
       uses: actions/setup-python@v2
+      with:
+        python-version: 3.8 
 
     - name: Install dependencies
       run: | 
         python -m pip install --upgrade pip 
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        pip install flake8 pep8-naming flake8-broken-line flake8-return
         pip install -r requirements.txt 
-    - name: Test with flake8 and django tests
+
+    - name: Test with flake8
       run: |
-            python -m flake8 --ignore=E501
-            pytest
+        python -m flake8 --ignore=E501,R504
+
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: tests
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v2 
+        uses: actions/checkout@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to Docker 
@@ -41,8 +41,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: ./backend/
-          tags: ${{ secrets.DOCKER_USERNAME }}/warmspace-foodgram:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,13 +55,14 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          stack_file_name: docker-compose.yaml
+          stack_file_name: docker-compose.yml
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace-foodgram:latest
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace-foodgram-frontend:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram_frontend:1
             sudo docker-compose stop
-            sudo docker-compose rm web
-            touch .env 
+            sudo docker-compose rm backend
+            touch .env
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
@@ -70,14 +70,14 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
-    if: github.ref == 'refs/heads/master'
     steps:
     - name: send message
       uses: appleboy/telegram-action@master
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: ${{ github.workflow }} успешно выполнен! 
+        message: ${{ github.workflow }} успешно выполнен!
