--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,45 +10,23 @@ services:
     restart: always
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: uforick/warmspace_foodgram_frontend:latest
     volumes:
-      - result_build:/build
-    depends_on:
-      - db
+      - result_build:/app/result_build/build
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: uforick/warmspace_foodgram:latest
     restart: always
+    depends_on:
+      - db
     volumes:
       - static_value:/code/static/
       - media_value:/code/media/
-    depends_on:
-      - db
     env_file:
-      - ./.env
-
-  nginx:
-    image: nginx:1.19.3
-    ports:
-      - 80:80
-    volumes:
-      - static_value:/static/
-      - media_value:/media/
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
-      - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-    restart: always
-
-    depends_on:
-      - backend
-      - frontend
+    - ./.env
 
 volumes:
+  result_build:
   postgres_data:
   static_value:
   media_value:
