--- a/.github/workflows/Foodgram_workflow.yml
+++ b/.github/workflows/Foodgram_workflow.yml
@@ -41,6 +41,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          context: ./backend/
           tags: ${{ secrets.DOCKER_USERNAME }}/warmspace_foodgram:latest
 
   deploy:
