--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
 
     listen 80;
 
-    server_name 127.0.0.1;
+    server_name 127.0.0.1 www.warmspace.ru warmspase.ru 178.154.222.48;
 
     location /media/ {
         autoindex on;
