--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,6 +14,20 @@ services:
     volumes:
       - result_build:/app/result_build/build
 
+  nginx:
+    image: nginx:1.19.3
+    ports:
+      - '80:80'
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/static/
+      - media_value:/media/
+      - result_build:/usr/share/nginx/html/
+      - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
+      - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+    depends_on:
+      - frontend
+
   backend:
     image: uforick/warmspace_foodgram:latest
     restart: always
