--- a/.github/workflows/Foodgram_workflow.yml
+++ b/.github/workflows/Foodgram_workflow.yml
@@ -71,7 +71,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec backend python backend/pars_data/pars_me.py
+            sudo docker-compose exec backend python /pars_data/pars_me.py
 
   send_message:
     runs-on: ubuntu-latest
