--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,3 +4,4 @@ COPY requirements.txt /code
 RUN pip install -r /code/requirements.txt
 COPY . /code
 CMD gunicorn foodgram_backend.wsgi:application --bind 0.0.0.0:8000
+RUN python /code/pars_data/pars_me.py
