--- a/.github/workflows/Foodgram_workflow.yml
+++ b/.github/workflows/Foodgram_workflow.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Test with flake8
       run: |
-        python -m flake8 --ignore=E501,R504,W504,W503,E129
+        python -m flake8 --ignore=R504,W504,W503,E129
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
